[package]
name = "sample"
version = "0.1.0"
authors = ["granbestiapop <leonardo.clavijo@mercadolibre.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
makromin = {path = "../"}
serde = { version = "1.0.112", features = ["derive"]}
serde_json = "1.0.55"